# Speaker_Motor

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.py  mkdocs.yml  objects.inv  omnisound.py  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  hardware_support.yml
.github/workflows/: ci.yml  docs.yml  release.yml
HARDWARE_SETUP/: index.html
core/: __init__.py  audio_pipeline.py  config_manager.py  engine.py  event_bus.py  motor_controller.py  plugin_registry.py
docs/: HARDWARE_SETUP.md
firmware/arduino/: omnisound_arduino.ino
firmware/esp32/: platformio.ini
firmware/esp32/src/: main.cpp
firmware/raspberry_pi_pico/: omnisound_pico.py
gui/: index.html  package.json  tailwind.config.js
gui/src/: App.jsx  index.css  store.js
gui/src/api/: websocket.js
gui/src/components/: MotorArcWidget.jsx  WaveformCanvas.jsx
gui/src/pages/: AudioSources.jsx  Dashboard.jsx  Diagnostics.jsx  MotorConfig.jsx  Sequences.jsx  Settings.jsx
plugins/audio_sources/: __init__.py  file_player.py  microphone.py  system_audio.py
plugins/hardware/: __init__.py  arduino_serial.py  esp32_wifi.py  raspberry_pi_gpio.py  simulation.py
plugins/processors/: __init__.py  band_splitter.py  beat_detector.py  fft_analyzer.py
search/: search_index.json
tests/integration/: test_engine_api.py
tests/unit/: test_audio_pipeline.py  test_beat_detector.py  test_config_manager.py  test_event_bus.py  test_fft_analyzer.py  test_motor_controller.py  test_plugin_registry.py  test_simulation.py
